--- a/admin/templates_virginia/base.html
+++ b/admin/templates_virginia/base.html
@@ -4,9 +4,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}CertChain | University of Tokyo{% endblock title %}</title>
+    <title>{% block title %}CertChain | University of Virginia{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="http://www.u-tokyo.ac.jp/content/400007642.ico">
+    <link rel="shortcut icon" href="https://sfs.virginia.edu/sites/sfs.virginia.edu/themes/financial_services/favicon.ico">
 
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic' rel='stylesheet' type='text/css'>
     {% block stylesheets %}
@@ -34,8 +34,8 @@
       <div id="su-content"> 
     
         <!-- Brandbar snippet start -->
-        <div id="brandbar" class="cc-tokyo-brandbar">
-          <div class="container"> <a href="https://www.stanford.edu"> <img id="stf-brand" src="http://www.u-tokyo.ac.jp/content/400002141.png" width="153" height="22" alt="University of Tokyo"> </a> </div>
+        <div id="brandbar" class="cc-uva-brandbar">
+          <div class="container"> <a href="https://www.stanford.edu"> <img id="stf-brand" src="https://bwac.arizona.edu/sites/default/files/UVA2.png" width="153" height="22" alt="University of Virginia"> </a> </div>
           <!-- .container end --> 
         </div>
         <!-- #brandbar end --> 
@@ -48,7 +48,7 @@
               <div class="row">
                 <div class="span6">
                   <div id="wordmark">
-                      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/UnivOfTokyo_logo_full.svg/375px-UnivOfTokyo_logo_full.svg.png" alt="Stanford wordmark" width="180" height="40" />
+                      <img src="http://accessuva.virginia.edu/sites/accessuva.virginia.edu/files/uva-logo.png" alt="Stanford wordmark" width="180" height="40" />
                   </div>
                   <div id="site"><!-- class="two-lines" or class="show-parent" -->
                     <div id="name">
@@ -94,12 +94,12 @@
     <!-- /#wrap -->
 
     <!-- Global footer snippet start -->
-    <div id="global-footer" class="cc-tokyo-footer">
+    <div id="global-footer" class="cc-uva-footer">
       <div class="container">
         <div class="row">
           <div id="bottom-logo" class="span2">
             <a href="https://www.stanford.edu">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/UnivOfTokyo_logo_full.svg/375px-UnivOfTokyo_logo_full.svg.png" alt="Stanford University" width="140"/>
+              <img src="http://accessuva.virginia.edu/sites/accessuva.virginia.edu/files/uva-logo.png" alt="Stanford University" width="140"/>
             </a>
           </div>
           <!-- #bottom-logo end -->
