Adding Ireland's styling.

--- a/admin/templates_tokyo/base.html
+++ b/admin/templates_tokyo/base.html
@@ -35,7 +35,7 @@
     
         <!-- Brandbar snippet start -->
         <div id="brandbar" class="cc-tokyo-brandbar">
-          <div class="container"> <a href="https://www.stanford.edu"> <img id="stf-brand" src="http://www.u-tokyo.ac.jp/content/400002141.png" width="153" height="22" alt="University of Tokyo"> </a> </div>
+          <div class="container"> <a href=""> <img id="stf-brand" src="http://www.u-tokyo.ac.jp/content/400002141.png" width="153" height="22" alt="University of Tokyo"> </a> </div>
           <!-- .container end --> 
         </div>
         <!-- #brandbar end --> 
@@ -48,7 +48,7 @@
               <div class="row">
                 <div class="span6">
                   <div id="wordmark">
-                      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/UnivOfTokyo_logo_full.svg/375px-UnivOfTokyo_logo_full.svg.png" alt="Stanford wordmark" width="180" height="40" />
+                      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/UnivOfTokyo_logo_full.svg/375px-UnivOfTokyo_logo_full.svg.png" alt="UnivOfTokyo_logo_full wordmark" width="180" height="40" />
                   </div>
                   <div id="site"><!-- class="two-lines" or class="show-parent" -->
                     <div id="name">
@@ -98,8 +98,8 @@
       <div class="container">
         <div class="row">
           <div id="bottom-logo" class="span2">
-            <a href="https://www.stanford.edu">
-              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/UnivOfTokyo_logo_full.svg/375px-UnivOfTokyo_logo_full.svg.png" alt="Stanford University" width="140"/>
+            <a href="">
+              <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/1d/UnivOfTokyo_logo_full.svg/375px-UnivOfTokyo_logo_full.svg.png" alt="University of Tokyo" width="140"/>
             </a>
           </div>
           <!-- #bottom-logo end -->
