--- a/admin/templates_ireland/base.html
+++ b/admin/templates_ireland/base.html
@@ -4,9 +4,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}CertChain | University of Virginia{% endblock title %}</title>
+    <title>{% block title %}CertChain | University of Ireland{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://sfs.virginia.edu/sites/sfs.virginia.edu/themes/financial_services/favicon.ico">
+    <link rel="shortcut icon" href="http://www.nui.ie/favicon.ico">
 
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic' rel='stylesheet' type='text/css'>
     {% block stylesheets %}
@@ -34,8 +34,8 @@
       <div id="su-content"> 
     
         <!-- Brandbar snippet start -->
-        <div id="brandbar" class="cc-uva-brandbar">
-          <div class="container"> <a href=""> <img id="stf-brand" src="https://bwac.arizona.edu/sites/default/files/UVA2.png" width="153" height="22" alt="University of Virginia"> </a> </div>
+        <div id="brandbar" class="cc-ireland-brandbar">
+          <div class="container"> <a href="">  </a> </div>
           <!-- .container end --> 
         </div>
         <!-- #brandbar end --> 
@@ -48,7 +48,7 @@
               <div class="row">
                 <div class="span6">
                   <div id="wordmark">
-                      <img src="http://accessuva.virginia.edu/sites/accessuva.virginia.edu/files/uva-logo.png" alt="UVA wordmark" width="180" height="40" />
+                      <img src="http://www.nuigalway.ie/chem/PFOLeary/nui-logo.gif" alt="Ireland wordmark" width="180" height="40" />
                   </div>
                   <div id="site"><!-- class="two-lines" or class="show-parent" -->
                     <div id="name">
@@ -94,18 +94,18 @@
     <!-- /#wrap -->
 
     <!-- Global footer snippet start -->
-    <div id="global-footer" class="cc-uva-footer">
+    <div id="global-footer" class="cc-ireland-footer">
       <div class="container">
         <div class="row">
           <div id="bottom-logo" class="span2">
             <a href="">
-              <img src="http://accessuva.virginia.edu/sites/accessuva.virginia.edu/files/uva-logo.png" alt="University of Virginia" width="140"/>
+              <img src="http://www.nuigalway.ie/chem/PFOLeary/nui-logo.gif" alt="University of Ireland" width="140"/>
             </a>
           </div>
           <!-- #bottom-logo end -->
           <div id="bottom-text" class="span10">
             <ul>
-              <li class="home"><a href="">Home</a></li>
+              <li class="home"><a href="https://www.stanford.edu">Home</a></li>
               <li class="maps alt"><a href="https://visit.stanford.edu/plan/maps.html">Maps &amp; Directions</a></li>
               <li class="search-stanford"><a href="https://www.stanford.edu/search/">Search</a></li>
               <li class="terms alt"><a href="https://www.stanford.edu/site/terms.html">Terms of Use</a></li>
