--- a/admin/templates_stanford/base.html
+++ b/admin/templates_stanford/base.html
@@ -8,7 +8,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="https://www.stanford.edu/favicon.ico">
 
-    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic' rel='stylesheet' type='text/css'>
+    <!-- MQUINN: Localizing font files for now, in order to demo application when not connected to the Internet. -->
+    <!-- <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,400italic' rel='stylesheet' type='text/css'> -->
+    <style>
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 300;
+        src: local('Source Sans Pro Light'), local('SourceSansPro-Light'), url({% static 'fonts/toadOcfmlt9b38dHJxOBGMw1o1eFRj7wYC6JbISqOjY.ttf' %}) format('truetype');
+      }
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Source Sans Pro'), local('SourceSansPro-Regular'), url({% static 'fonts/ODelI1aHBYDBqgeIAH2zlNzbP97U9sKh0jjxbPbfOKg.ttf' %}) format('truetype');
+      }
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 600;
+        src: local('Source Sans Pro Semibold'), local('SourceSansPro-Semibold'), url({% static 'fonts/toadOcfmlt9b38dHJxOBGNNE-IuDiR70wI4zXaKqWCM.ttf' %}) format('truetype');
+      }
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: normal;
+        font-weight: 700;
+        src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url({% static 'fonts/toadOcfmlt9b38dHJxOBGLsbIrGiHa6JIepkyt5c0A0.ttf' %}) format('truetype');
+      }
+      @font-face {
+        font-family: 'Source Sans Pro';
+        font-style: italic;
+        font-weight: 400;
+        src: local('Source Sans Pro Italic'), local('SourceSansPro-It'), url({% static 'fonts/M2Jd71oPJhLKp0zdtTvoM0DauxaEVho0aInXGvhmB4k.ttf' %}) format('truetype');
+      }
+    </style>
+
     {% block stylesheets %}
       <link href="{% static 'css/su-identity/su-identity.css' %}" rel="stylesheet">
       <link href="{% static 'css/lib/bootstrap.css' %}" rel="stylesheet">
@@ -35,7 +69,7 @@
     
         <!-- Brandbar snippet start -->
         <div id="brandbar">
-          <div class="container"> <a href="https://www.stanford.edu"> <img id="stf-brand" src="https://www.stanford.edu/su-identity/images/brandbar-stanford-logo@2x.png" width="153" height="22" alt="Stanford University"> </a> </div>
+          <div class="container"> <a href="https://www.stanford.edu"> <img id="stf-brand" src="{% static 'images/stanford_logo.png' %}" width="153" height="22" alt="Stanford University"> </a> </div>
           <!-- .container end --> 
         </div>
         <!-- #brandbar end --> 
@@ -48,7 +82,7 @@
               <div class="row">
                 <div class="span6">
                   <div id="wordmark">
-                      <img src="https://www.stanford.edu/su-identity/images/wordmark-red@2x.png" alt="Stanford wordmark" width="180" height="40" />
+                      <img src="{% static 'images/stanford_logo2.png' %}" alt="Stanford wordmark" width="180" height="40" />
                   </div>
                   <div id="site"><!-- class="two-lines" or class="show-parent" -->
                     <div id="name">
@@ -99,7 +133,7 @@
         <div class="row">
           <div id="bottom-logo" class="span2">
             <a href="https://www.stanford.edu">
-              <img src="https://www.stanford.edu/su-identity/images/footer-stanford-logo@2x.png" alt="Stanford University" width="105" height="49"/>
+              <img src="{% static 'images/stanford_logo3.png' %}" alt="Stanford University" width="105" height="49"/>
             </a>
           </div>
           <!-- #bottom-logo end -->
