Minor UI adjustments.

--- a/admin/templates_ireland/base.html
+++ b/admin/templates_ireland/base.html
@@ -35,7 +35,7 @@
     
         <!-- Brandbar snippet start -->
         <div id="brandbar" class="cc-ireland-brandbar">
-          <div class="container"> <a href="">  </a> </div>
+          <div class="container"></div>
           <!-- .container end --> 
         </div>
         <!-- #brandbar end --> 
