--- a/admin/templates_tokyo/base.html
+++ b/admin/templates_tokyo/base.html
@@ -35,7 +35,7 @@
     
         <!-- Brandbar snippet start -->
         <div id="brandbar" class="cc-tokyo-brandbar">
-          <div class="container"> <a href=""> <img id="stf-brand" src="http://www.u-tokyo.ac.jp/content/400002141.png" width="153" height="22" alt="University of Tokyo"> </a> </div>
+          <div class="container"></div>
           <!-- .container end --> 
         </div>
         <!-- #brandbar end --> 
