--- a/admin/templates_virginia/base.html
+++ b/admin/templates_virginia/base.html
@@ -69,7 +69,7 @@
     
         <!-- Brandbar snippet start -->
         <div id="brandbar" class="cc-uva-brandbar">
-          <div class="container"> <a href=""> <img id="stf-brand" src="{% static 'images/uva_logo.png' %}" width="153" height="22" alt="University of Virginia"> </a> </div>
+          <div class="container"></div>
           <!-- .container end --> 
         </div>
         <!-- #brandbar end --> 
