Supporting batch certification of documents.

--- a/admin/templates_ireland/base.html
+++ b/admin/templates_ireland/base.html
@@ -28,6 +28,9 @@
     <!--[if IE 7]>
       <link rel="stylesheet" type="text/css" href="https://www.stanford.edu/su-identity/css/ie/ie7.css" />
     <![endif]-->
+
+    {% block javascript %}
+    {% endblock javascript %}
   </head>
   <body class="home">
     <div id="su-wrap">
