--- a/admin/templates_virginia/base.html
+++ b/admin/templates_virginia/base.html
@@ -43,6 +43,9 @@
       }
     </style>
 
+    {% block javascript %}
+    {% endblock javascript %}
+
     {% block stylesheets %}
       <link href="{% static 'css/su-identity/su-identity.css' %}" rel="stylesheet">
       <link href="{% static 'css/lib/bootstrap.css' %}" rel="stylesheet">
