--- a/admin/templates_stanford/base.html
+++ b/admin/templates_stanford/base.html
@@ -52,6 +52,9 @@
       <link href="{% static 'css/certchain.css' %}" rel="stylesheet">
     {% endblock stylesheets %}
 
+    {% block javascript %}
+    {% endblock javascript %}
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
