--- a/admin/templates_tokyo/base.html
+++ b/admin/templates_tokyo/base.html
@@ -17,6 +17,9 @@
       <link href="{% static 'css/su-identity/custom.css' %}" rel="stylesheet">
       <link href="{% static 'css/certchain.css' %}" rel="stylesheet">
     {% endblock stylesheets %}
+    
+    {% block javascript %}
+    {% endblock javascript %}
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
